# flybase-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  flybase_cli.py  pyproject.toml
.github/workflows/: release.yml
scripts/: release  sync-version.sh
src/flybase_cli/: __init__.py  cli.py  config.py  core.py  loaders.py  postgres.py  querying.py  schema.py  semantics.py  syncing.py
tests/: test_core.py  test_postgres.py  test_querying.py  test_syncing.py
