[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flybase"
version = "0.1.2"
description = "FlyBase sync/query helper for agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[project.scripts]
flybase = "flybase_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
